--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "pretest": "jshint ."
   },
   "dependencies": {
+    "bunyan": "^1.3.4",
     "compression": "^1.0.3",
     "errorhandler": "^1.1.1",
     "loopback": "^2.8.0",
